--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
-            <img class="profile-pic" src="/images/hardy.png" alt="">
+            <img class="profile-pic" src="images/hardy.png" alt="">
         </div>
     </header>
     <main>
@@ -72,25 +72,25 @@
             <div class="skills-container">
                 <!-- .skill*4>img+h3.skill-title+p.skill-description -->
                 <div class="skill">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="">
                     <h3 class="skill-title">Vanilla JavaScript</h3>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                         the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/react.png" alt="">
+                    <img src="images/icons/react.png" alt="">
                     <h3 class="skill-title">React</h3>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                         the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/nodejs.png" alt="">
+                    <img src="images/icons/nodejs.png" alt="">
                     <h3 class="skill-title">Node.js</h3>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                         the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/mongo.png" alt="">
+                    <img src="images/icons/mongo.png" alt="">
                     <h3 class="skill-title">MongoDB</h3>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                         the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
@@ -165,9 +165,9 @@
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div class="social-links">
-                <a href=""><img src="/images/icons/facebook.png" alt=""></a>
-                <a href=""><img src="/images/icons/twitter.png" alt=""></a>
-                <a href=""><img src="/images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
             </div>
         </div>
         <div class="footer-column">
